<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Power Timers</string>
	<string name="menu_timer">Timer</string>

	<string name="title_timer">Timer</string>
	<string name="minutes">Minutes</string>
	<string name="seconds">Seconds</string>
	<string name="resume">Resume</string>
	<string name="stop">Stop</string>
	<string name="reset">Reset</string>
	<string name="start">Start</string>
	<string name="settings">Settings</string>

	<string name="title_countdown_timer">CyanMobile Countdown Timer</string>
	<string name="OK">OK</string>
	<string name="pref_show_hour_column">Show hour column has been set to </string>
	<string name="reset_due_to_shake">Resetting due to shake.</string>
        <string name="pref_changed_shaketoreset">Shake to reset has been set to </string>

	<string name="hours">00</string>
	<string name="hoursparator">:</string>
	<string name="minutess">08</string>
	<string name="minutesparator">:</string>
	<string name="secondss">00</string>
</resources>
